--- a/LaTeX/Dissertation.tex
+++ b/LaTeX/Dissertation.tex
@@ -1,20 +1,20 @@
 \documentclass{article}
 
-\title{Analysing reconviction rates at a criminal work placement centre}
+\title{Cubic Curves Over Finite Fields}
 \author{Will Bolton}
 \date{\today}
 \input{header.tex}
 %select dimensions in header
-%\bibliographystyle{apalike}
+\bibliographystyle{apalike}
 
 \begin{document}
 \maketitle
 \tableofcontents
 
-\section{Briefing}
+\section{Preliminaries and Motivation}
 \lipsum[1-3]
 
-\section{Analysis}
+\section{Exploration}
 \lipsum[4-6]
 
 \section{Conclusion}
@@ -26,5 +26,7 @@
 \appendix
 \section{R Code}
 Hmm
-%\bibliography{333.bib}
+\citet{silverman-rational}
+\citet{silverman-arithmetic}
+\bibliography{Master.bib}
 \end{document}
