Added two books to bib, recompiled and stopped tracking the pdf file.

--- a/LaTeX/Dissertation.tex
+++ b/LaTeX/Dissertation.tex
@@ -28,5 +28,7 @@
 Hmm
 \citet{silverman-rational}
 \citet{silverman-arithmetic}
+\citet{fraleigh2013}
+\citet{goodman1998}
 \bibliography{Master.bib}
 \end{document}
