--- a/LaTeX/Master.bib
+++ b/LaTeX/Master.bib
@@ -2,12 +2,28 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Will Bolton at 2015-07-02 00:37:13 +0100 
+%% Created for Will Bolton at 2015-08-04 11:01:44 +0100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@book{fraleigh2013,
+	Author = {Fraleigh, John B},
+	Date-Added = {2015-08-04 10:01:00 +0000},
+	Date-Modified = {2015-08-04 10:01:42 +0000},
+	Publisher = {Pearson Higher Ed},
+	Title = {First Course in Abstract Algebra, A: Pearson New International Edition},
+	Year = {2013}}
+
+@book{goodman1998,
+	Author = {Goodman, Frederick M},
+	Date-Added = {2015-08-04 10:00:53 +0000},
+	Date-Modified = {2015-08-04 10:01:23 +0000},
+	Publisher = {Prentice Hall},
+	Title = {Algebra: abstract and concrete},
+	Year = {1998}}
 
 @book{silverman-rational,
 	Author = {Silverman, Joseph H and Tate, John T},
