Added separate .tex file for the proof of Gauss' theorem and incorporated it into the dissertation document

--- a/LaTeX/Dissertation.tex
+++ b/LaTeX/Dissertation.tex
@@ -7,6 +7,8 @@
 %select dimensions in header
 \bibliographystyle{apalike}
 
+\newcommand{\fp}{\mathbb{F}_p}
+
 \begin{document}
 \maketitle
 \tableofcontents
@@ -16,6 +18,7 @@
 
 \section{Exploration}
 \lipsum[4-6]
+\input{gauss.tex}
 
 \section{Conclusion}
 \lipsum[7-9]
