Minor changes to pretty much everything and renamed Master.bib master.bib.

--- a/LaTeX/dissertation.tex
+++ b/LaTeX/dissertation.tex
@@ -5,7 +5,7 @@
 \date{\today}
 \input{header.tex}
 %select dimensions in header
-\bibliographystyle{apalike}
+\bibliographystyle{unsrt}
 
 \newcommand{\fp}{\mathbb{F}_p}
 
@@ -29,9 +29,9 @@
 \appendix
 \section{R Code}
 Hmm
-\citet{silverman-rational}
-\citet{silverman-arithmetic}
-\citet{fraleigh2013}
-\citet{goodman1998}
-\bibliography{Master.bib}
+\cite{silverman-rational}
+\cite{silverman-arithmetic}
+\cite{fraleigh2013}
+\cite{goodman1998}
+\bibliography{master.bib}
 \end{document}
