--- a/LaTeX/gauss.tex
+++ b/LaTeX/gauss.tex
@@ -13,9 +13,9 @@
 % 	Prove A satisfies the useful conditions
 
 \begin{theorem}
-Define $M_p$ to be the number of solutions to the equation $x^3 + y^3 + z^3 = 0$ in the field $\mathbb{F}_p$. Then,
+Define $M_p$ to be the number of solutions to the equation $x^3 + y^3 + z^3 = 0$ in the field $\fp$. Then,
 \begin{itemize}
-\item if $p \not\equiv 1 \text{mod} 3$, this
-\item otherwise fu $\fp$
+	\item if $p \not\equiv 1 \mod{3}$, this
+\item otherwise fu
 \end{itemize}
 \end{theorem}
