--- a/LaTeX/header.tex
+++ b/LaTeX/header.tex
@@ -1,5 +1,5 @@
-%\usepackage[hmargin=2.5cm,vmargin=2.5cm]{geometry} %Favourite. From 390 year 2
-\usepackage[textwidth=16cm,textheight=23cm]{geometry} %Nadia's
+\usepackage[hmargin=2.5cm,vmargin=2.5cm]{geometry} %Favourite. From 390 year 2
+%\usepackage[textwidth=16cm,textheight=23cm]{geometry} %Nadia's
 \usepackage{graphicx}
 \usepackage{natbib}
 \usepackage{amsmath}
