Modified \fp macro to accept arguments and wrote more of the proof in gauss.tex

--- a/LaTeX/dissertation.tex
+++ b/LaTeX/dissertation.tex
@@ -7,7 +7,8 @@
 %select dimensions in header
 \bibliographystyle{unsrt}
 
-\newcommand{\fp}{\mathbb{F}_p}
+\newcommand{\fp}[1][p]{\mathbb{F}_{#1}}
+\newcommand{\fpu}{\mathbb{F}_p^{\times}}
 
 \begin{document}
 \maketitle
