--- a/LaTeX/gauss.tex
+++ b/LaTeX/gauss.tex
@@ -27,5 +27,6 @@ Define $M_p$ to be the number of projective solutions to the equation $x^3 + y^3
 The proof of the two separate cases both rely on the same idea, but in the second case requires many more steps before the result is reached, and beginning the proof without an idea of what is to come can make it very hard to understand, as numerous objects are introduced. Therefore we will prove the first case, provide an outline of the proof second case and then finally supply the details.
 
 For both cases, the proof revolves around examining the homomorphism
-$$\varphi: \fp^{\times} \rightarrow \fp^{\times}, \qquad x \mapsto x^3$$
+$$\varphi: \fpu \rightarrow \fpu \qquad x \mapsto x^3$$
+Now in the first case, since 3 does not divide the order of $\fpu$, $\varphi$ is bijective, and so an isomorphism. This means that each element of $\fp$ has exactly one cube root. For example, in $\fp[7]$, we have:
 \end{proof}
