--- a/LaTeX/gauss.tex
+++ b/LaTeX/gauss.tex
@@ -28,5 +28,19 @@ The proof of the two separate cases both rely on the same idea, but in the secon
 
 For both cases, the proof revolves around examining the homomorphism
 $$\varphi: \fpu \rightarrow \fpu \qquad x \mapsto x^3$$
-Now in the first case, since 3 does not divide the order of $\fpu$, $\varphi$ is bijective, and so an isomorphism. This means that each element of $\fp$ has exactly one cube root. For example, in $\fp[7]$, we have:
+Now in the first case, since 3 does not divide the order of $\fpu$, $\varphi$ is bijective, and so an isomorphism. This means that each element of $\fp$ has exactly one cube root. For example, in $\fp[11]$, we have:
+\begin{align*}
+	0^3 &= 0,\quad
+	1^3 = 1,\quad
+	7^3 = 2,\quad
+	9^3 = 3,\quad
+	5^3 = 4,\quad
+	3^3 = 5,\\
+	8^3 &= 6,\quad
+	6^3 = 7,\quad
+	2^3 = 8,\quad
+	4^3 = 9,\quad
+	10^3 = 10
+\end{align*}
+Isn't that cool?
 \end{proof}
