Finished typing up first draft of first case.

--- a/LaTeX/gauss.tex
+++ b/LaTeX/gauss.tex
@@ -40,7 +40,7 @@ Now in the first case, since 3 does not divide the order of $\fpu$, $\varphi$ is
 	6^3 = 7,\quad
 	2^3 = 8,\quad
 	4^3 = 9,\quad
-	10^3 = 10
+	10^3 = 10.
 \end{align*}
-Isn't that cool?
+This implies that every solution of $x + y + z = 0$ gives exactly one solution of $x^3 + y^3 + z^3 = 0$ by cube rooting each of $x,y,z$. Since $x + y + z = 0$ is the equation of a line in the projective plane, it has exactly $p+1$ solutions. This settles the first case.
 \end{proof}
