Minor additions to gauss.tex

--- a/LaTeX/gauss.tex
+++ b/LaTeX/gauss.tex
@@ -56,7 +56,7 @@ Now to outline what happens in the second case.
 \end{itemize}
 So after getting an initial expression for $M_p$, we basically update it a lot through many smaller arguments, eventually arriving at the one we need.
 
-Since $p \equiv 1 \mod{3}$, 3 divides the order of $\fpu = p-1$, and so $\varphi$ is a homomorphism that is neither injective nor surjective. For example, in $\fp[7]$, we have:
+Since $p \equiv 1 \mod{3}$, 3 divides the order of $\fpu = p-1$, and so $\varphi$ is a homomorphism that is neither injective nor surjective. For example, in $\fp[13]$, we have:
 \begin{align*}
 	0^3 &= 0\\
 	1^3 = 3^3 = 9^3 &= 1\\
@@ -64,5 +64,6 @@ Since $p \equiv 1 \mod{3}$, 3 divides the order of $\fpu = p-1$, and so $\varphi
 	2^3 = 5^3 = 6^3 &= 8\\
 	4^3 = 10^3 = 12^3 &= 12\\
 \end{align*}
-Now, we can introduce our sets $R$, $S$ and $T$.
+Now, we can introduce our sets $R$, $S$ and $T$. Let
+$$R=\{x^3:x\in \fpu\}$$
 \end{proof}
