Added explanatory note to gauss.tex

--- a/LaTeX/gauss.tex
+++ b/LaTeX/gauss.tex
@@ -1,3 +1,5 @@
+% This .tex file is simply the statement and proof of Gauss' theorem. To be inserted normally into the main document.
+%
 % The structure of this proof is fairly convoluted. It can be broken down as follows:
 % Introduce homomorphism
 % Easy case
