Added (and possibly modified, I forget) some new commands

--- a/LaTeX/dissertation.tex
+++ b/LaTeX/dissertation.tex
@@ -9,6 +9,8 @@
 
 \newcommand{\fp}[1][p]{\mathbb{F}_{#1}}
 \newcommand{\fpu}{\mathbb{F}_p^{\times}}
+\newcommand{\for}{\text{for}\quad}
+\newcommand{\si}{\text{if}\quad}
 
 \begin{document}
 \maketitle
