--- a/LaTeX/gauss.tex
+++ b/LaTeX/gauss.tex
@@ -68,4 +68,14 @@ Since $p \equiv 1 \mod{3}$, 3 divides the order of $\fpu = p-1$, and so $\varphi
 \end{align*}
 Now, we can introduce our sets $R$, $S$ and $T$. Let
 $$R=\{x^3:x\in \fpu\}$$
+and let $S = sR$ and $T = s^2R$, where $s$ is any element not in $R$. We now have a partition of $\fp$ as follows:
+$$\fp = \{0\} \cup R \cup S \cup T$$
+Notice that $\#R = \#S = \#T = m$. Since $-1=(-1)^3$, $-1 \in R$ and $R = -R$, which implies that $S=-S$ and $T=-T$.
+Now that we have our partition of $\fp$, we can reason about $M_p$, the object of interest in this proof. First, though, we introduce an important new notation. For $X,Y,Z \subset \fp$:
+$$[X,Y,Z] = \#(x,y,z) : x\in X,\quad y\in Y,\quad z\in Z\quad \& \quad x+y+z=0$$
+For simplicity, we will sometimes write $[XYZ]$ instead of $[X,Y,Z]$. The symbol $[]$ has a number of useful properties, such as:
+\begin{align*}
+	[XY(Z\cup W)] = [XYZ] + [XYW]\quad \si Z\cap W = \emptyset\\
+	[XYZ] = [aX, aY, aZ]\quad \for a\neq0
+\end{align*}
 \end{proof}
