Small modification to diss.tex and started rsa.tex to be the example decryption.

--- a/LaTeX/dissertation.tex
+++ b/LaTeX/dissertation.tex
@@ -11,6 +11,7 @@
 \newcommand{\fpu}{\mathbb{F}_p^{\times}}
 \newcommand{\for}{\text{for}\quad}
 \newcommand{\si}{\text{if}\quad}
+%\newcommand{\gcd}{\text{gcd}\quad}
 
 \begin{document}
 \maketitle
@@ -21,7 +22,8 @@
 
 \section{Exploration}
 \lipsum[4-6]
-\input{gauss.tex}
+%\input{gauss.tex}
+\input{rsa.tex}
 
 \section{Conclusion}
 \lipsum[7-9]
