Rearranged dissertation.tex and slight modification to rsa

--- a/LaTeX/rsa.tex
+++ b/LaTeX/rsa.tex
@@ -12,4 +12,4 @@ $$2191801374392476491053-406058948051076877967 = 1785742426341399613086$$ and $\
 
 Now that we know this, we calculate $(p-1) \times (q-1) = 3160853181294818955240$ and then find the multiplicative inverse of $e = 65537$ modulo $3160853181294818955240$ with the euclidean algorithm. This turns out to be $146040609624497792033$, and we finally decrypt our message by taking
 $$ M^{146040609624497792033} \mod 3160853182090460427047 =2016 $$
-,so we see that whatever nefarious organisation we are spying on is communicating the current year.
+so we see that whatever nefarious organisation we are spying on is communicating the current year.
