--- a/LaTeX/dissertation.tex
+++ b/LaTeX/dissertation.tex
@@ -17,16 +17,20 @@
 \maketitle
 \tableofcontents
 
-\section{Preliminaries and Motivation}
+\section{Preamble}
+%\lipsum[1-3]
+\input{h-w.tex}
+\clearpage
+\input{gauss.tex}
+\clearpage
+
+\section{Algorithms}
 \lipsum[1-3]
 
-\section{Exploration}
-\lipsum[4-6]
-%\input{gauss.tex}
+\section{Discussion}
+%\lipsum[1-3]
 \input{rsa.tex}
-
-\section{Conclusion}
-\lipsum[7-9]
+\clearpage
 
 \section{To do}
 \listoftodos
