Got rid of todonotes in diss and header, changed the appendix name and added small clarification in h-w

--- a/LaTeX/dissertation.tex
+++ b/LaTeX/dissertation.tex
@@ -32,11 +32,8 @@
 \input{rsa.tex}
 \clearpage
 
-\section{To do}
-\listoftodos
-
 \appendix
-\section{R Code}
+\section{Code}
 Hmm
 \cite{silverman-rational}
 \cite{silverman-arithmetic}
