Added command for point at infinity and included it in h-w

--- a/LaTeX/dissertation.tex
+++ b/LaTeX/dissertation.tex
@@ -11,7 +11,7 @@
 \newcommand{\fpu}{\mathbb{F}_p^{\times}}
 \newcommand{\for}{\text{for}\quad}
 \newcommand{\si}{\text{if}\quad}
-%\newcommand{\gcd}{\text{gcd}\quad}
+\newcommand{\pai}{\mathcal{O}}
 
 \begin{document}
 \maketitle
