--- a/LaTeX/h-w.tex
+++ b/LaTeX/h-w.tex
@@ -36,5 +36,5 @@ Which leads us to the four points
 (2,2)\\
 (2,5)
 \end{align*}
-Including the point at infinity, the Hasse-Weil theorem gives $\#C(\fp[7]) = 7 + 1 + \epsilon$, where $|\epsilon| \leq 2\sqrt{7}$, which bounds the number of points on $C$ as $8\pm5$, or $\#C(\fp[7]) \in \{3,4,\ldots,13\}$. Clearly, 5 % or 4 if you don't count big O?
+Including the point at infinity $\pai$, the Hasse-Weil theorem gives $\#C(\fp[7]) = 7 + 1 + \epsilon$, where $|\epsilon| \leq 2\sqrt{7}$, which bounds the number of points on $C$ as $8\pm5$, or $\#C(\fp[7]) \in \{3,4,\ldots,13\}$. Clearly, 5 % or 4 if you don't count big O?
 agrees with this estimate.
