Added note to h-w

--- a/LaTeX/h-w.tex
+++ b/LaTeX/h-w.tex
@@ -1,6 +1,7 @@
 % This file will give the statement & example of the Hasse-Weil bound by verifying it on x^3 + x + 1 = 0 over f_7
 % Is it necessary to go through the method of finding the points??
 % When counting points, presumably it is necessary to include the point at infinity?
+% Add in intuitive proof and refer
 
 \begin{theorem}
 For an elliptic curve $C$ over a finite field $\fp$, the number of points on $C = \#C(\fp) = p + 1 + \epsilon$, where $|\epsilon| \leq 2\sqrt{p}$
