--- a/LaTeX/gauss.tex
+++ b/LaTeX/gauss.tex
@@ -75,7 +75,44 @@ Now that we have our partition of $\fp$, we can reason about $M_p$, the object o
 $$[X,Y,Z] = \#(x,y,z) : x\in X,\quad y\in Y,\quad z\in Z\quad \& \quad x+y+z=0$$
 For simplicity, we will sometimes write $[XYZ]$ instead of $[X,Y,Z]$. The symbol $[]$ has a number of useful properties, such as:
 \begin{align*}
-	[XY(Z\cup W)] = [XYZ] + [XYW]\quad \si Z\cap W = \emptyset\\
-	[XYZ] = [aX, aY, aZ]\quad \for a\neq0
+	[XY(Z\cup W)] &= [XYZ] + [XYW]\quad \si Z\cap W = \emptyset\\
+	[XYZ] &= [aX, aY, aZ]\quad \for a\neq0\\
+	[XYZ] &= [XZY] = \ldots
+\end{align*}
+These properties are important and we will use them later to manipulate our initial expression for $M_p$. 
+
+Now, if $xyz\neq0$, then the number of ways of writing $0$ as a sum of non-zero cubes is $[RRR]$, simply by the definitions of the symbol $[]$ and the set $R$. But each element of $R$ has three distinct cube roots, and so there are $(3 \times 3 \times 3) [RRR] = 27[RRR]$ solutions of $x^3 + y^3 + z^3 = 0$ of the form $(x,y,z)$ where $xyz \neq 0$. But since we are working in the projective plane, scalar multiples of the same point are in fact the same point, so we have to divide by $p-1$ for all of the non-zero multipliers of $\fp$, which gives
+$$\frac{27[RRR]}{p-1} = \frac{27[RRR]}{3m} = \frac{9[RRR]}{m}$$
+projective solutions where $xyz\neq0$.
+
+Now, when one of $x$, $y$ or $z$ is zero, say $x$, neither $y$ nor $z$ can be zero, as either being zero would force the other to also be zero, and the solution $(0,0,0)$ is not allowed in the projective plane. Thus there are $p-1$ choices for $y$, each of which gives three choices of $z$ (by solving $y^3 = -x^3$ and remembering that eachelement has three cube roots), which means there are $3(p-1)$ solutions when $x=0$. The same goes for $y$ and $z$ being zero, so we have a total of $9(p-1)$ solutions where $xyz=0$. However, again, we must divide through by $p-1$, so there are 9 projective solutions when $xyz=0$. This covers all cases, and so we have established that
+\begin{equation}
+M_p = \frac{9[RRR]}{m} + 9 = 9 \left(\frac{[RRR]}{m}+1\right) \label{g_initial}
+\end{equation}
+The rest of the proof now relies on modifying this expression until we have the stated result. First of all, we use some properties of $[]$ to simplify \eqref{g_initial}.
+
+To begin with, recall that $\fp = {0} \cup R \cup S \cup T$, a disjoint union. Also, notice that $[RR\fp] = m^2$, since there are $m$ choices for each element of $R$, say $r_1$ and $r_2$, and then let the element of $\fp$ be $-r_1r_2$. Using these two facts, we see that
+\begin{equation}
+	[RR\{0\}] + [RRR] + [RRS] + [RRT] = m^2 \label{g_manipulate1}
+\end{equation}
+now fix $s \in S$ and $t \in T$.
+$$[RRS] = [sR, sR, sS] = [SST]$$
+and likewise, $[RRT] = [TTS]$. Substituting these into \eqref{g_manipulate1}, we have
+\begin{equation}
+	[RR\{0\}] +[RRR] + [SST] + [TTS] = m^2 \label{g_manipulate2}
+\end{equation}
+Again using the dijoint union of $\fp$ and $[\fp TS] = m^2$ (for the same reasons as $[RR\fp]$, we have
+\begin{equation}
+	[\fp TS] = [\{0\}TS] + [RTS] + [STS] + [TTS] = m^2 \label{g_manipulate3}
+\end{equation}
+Recall that $[STS] = [SST]$. Now notice two things, first, that $[\{0\}TS] = 0$, since $T = -T$, $S = -S$ and $T \cap S = \emptyset$. Secondly, $[RR\{0\}] = m$, since each element of $R$ has exactly one inverse, also in $R$. Combine these observations with substracting \eqref{g_manipulate2} from \eqref{g_manipulate3} and we end up with
+\begin{equation}
+	[RTS] = [RRR] + m
+\end{equation}
+Now we can substitute this into our initial expression as follows:
+\begin{align*}
+	M_p &= 9\left(\frac{[RRR]}{m}+1\right)\\
+	    &= \frac{9}{m}\left([RRR] + m\right)\\
+	    &= \frac{9[RTS]}{m}
 \end{align*}
 \end{proof}
