--- a/LaTeX/dissertation.tex
+++ b/LaTeX/dissertation.tex
@@ -8,7 +8,7 @@
 \bibliographystyle{unsrt}
 
 \newcommand{\fp}[1][p]{\mathbb{F}_{#1}}
-\newcommand{\fpu}{\mathbb{F}_p^{\times}}
+\newcommand{\fpu}[1][p]{\mathbb{F}_{#1}^{\times}}
 \newcommand{\for}{\text{for}\quad}
 \newcommand{\si}{\text{if}\quad}
 \newcommand{\pai}{\mathcal{O}}
@@ -19,7 +19,7 @@
 
 \section{Preamble}
 %\lipsum[1-3]
-\input{h-w.tex}
+%\input{h-w.tex}
 \clearpage
 \input{gauss.tex}
 \clearpage
@@ -29,7 +29,7 @@
 
 \section{Discussion}
 %\lipsum[1-3]
-\input{rsa.tex}
+%\input{rsa.tex}
 \clearpage
 
 \appendix
