--- a/LaTeX/dissertation.tex
+++ b/LaTeX/dissertation.tex
@@ -19,17 +19,18 @@
 
 \section{Preamble}
 \input{definitions.tex}
-%\input{h-w.tex}
+\input{h-w.tex}
 \clearpage
 \input{gauss.tex}
 \clearpage
 
 \section{Algorithms}
-\lipsum[1-3]
+\input{algorithms.tex}
+%\lipsum[1-3]
 
 \section{Discussion}
 %\lipsum[1-3]
-%\input{rsa.tex}
+\input{rsa.tex}
 \clearpage
 
 \appendix
