--- a/LaTeX/algorithms.tex
+++ b/LaTeX/algorithms.tex
@@ -41,4 +41,4 @@ As the numbers involved grow larger, the time savings over the trivial method be
 		\item Continue until one of the additions fails
 	\end{itemize}
 \end{definition}
-Whilst this may seem strange, considering everything we have discussed so far, it makes sense. What we are doing is taking an integer $N$ that we know is composite and attempting to use it as the modulus in a finite field $\fp[n]$. But because it is composite, we know that $\fp[n]$ will not be a proper field, as some elements will not have multiplicative inverses. If we attempt to calculate the inverses of these elements with the euclidean algorithm, we will be unable to, as they will not be coprime with $N$. But this very calculation will give us a non-trivial divisor of $N$, so it will not matter that we cannot calculate the inverses.
+Whilst this may seem strange, considering everything we have discussed so far, it makes sense. What we are doing is taking an integer $N$ that we know is composite and attempting to use it as the modulus in a finite field $\fp[N]$. But because it is composite, we know that $\fp[N]$ will not be a proper field, as some elements will not have multiplicative inverses. If we attempt to calculate the inverses of these elements with the euclidean algorithm, we will be unable to, as they will not be coprime with $N$. But this very calculation will give us a non-trivial divisor of $N$, so it will not matter that we cannot calculate the inverses.
