Sorted out appendix of code

--- a/LaTeX/dissertation.tex
+++ b/LaTeX/dissertation.tex
@@ -40,7 +40,7 @@ Hmm
 \cite{silverman-arithmetic}
 \cite{fraleigh2013}
 \cite{goodman1998}
-\input{appendixcode.tex}
-%\lstinputlisting[language=Python]{../../diss-python/pollard.py}
+%\input{appendixcode.tex}
+\lstinputlisting{../../diss-python/pollard.py}
 \bibliography{master.bib}
 \end{document}
