Redefined 'if' and 'for' text commands and implemented them in Gauss

--- a/LaTeX/gauss.tex
+++ b/LaTeX/gauss.tex
@@ -131,9 +131,9 @@ which shows that $N_x$ depends only on the coset $R$, $S$ or $T$ in which $x$ li
 \begin{equation*}
 	mN_x = [S,T,Rx] = \left\{
 		\begin{array}{rl}
-			{[STR]} & \text{if } x \in R,\\
-			{[STS]} & \text{if } x \in S,\\
-			{[STT]} & \text{if } x \in T.
+			{[STR]} & \si x \in R,\\
+			{[STS]} & \si x \in S,\\
+			{[STT]} & \si x \in T.
 		\end{array}
 		\right.
 \end{equation*}
