--- a/LaTeX/dissertation.tex
+++ b/LaTeX/dissertation.tex
@@ -9,8 +9,8 @@
 
 \newcommand{\fp}[1][p]{\mathbb{F}_{#1}}
 \newcommand{\fpu}[1][p]{\mathbb{F}_{#1}^{\times}}
-\newcommand{\for}{\text{for}\quad}
-\newcommand{\si}{\text{if}\quad}
+\newcommand{\for}{\text{for }}
+\newcommand{\si}{\text{if }}
 \newcommand{\pai}{\mathcal{O}}
 
 \begin{document}
