--- a/LaTeX/gauss.tex
+++ b/LaTeX/gauss.tex
@@ -176,9 +176,9 @@ where $k$ is yet another new letter, defined as $k = 2a-b-c=3a-m$. This is the l
 $$f(t) = t^3 + t^2 - mt - \frac{a+km}{3}$$
 We then update our expression for $M_p$ once more, and have
 $$M_p = 9a = 3(k + m) = 3k + p - 1$$
-Now let $D_F$ be the discriminant of $F$. Using our formula for the $\alpha_i \alpha_j$, we can calculate a square root of $D_F$ as
+Now let $D_f$ be the discriminant of $f$. Using our formula for the $\alpha_i \alpha_j$, we can calculate a square root of $D_f$ as
 \begin{align*}
-	\sqrt{D_F} &= (\alpha_1 - \alpha_2)(\alpha_1 - \alpha_3)(\alpha_2 - \alpha_3)\\
+	\sqrt{D_f} &= (\alpha_1 - \alpha_2)(\alpha_1 - \alpha_3)(\alpha_2 - \alpha_3)\\
 	&= \alpha_2\alpha_3(\alpha_2-\alpha_3) + \alpha_3\alpha_1(\alpha_3-\alpha_1) + \alpha_1\alpha_2(\alpha_1-\alpha_2)\\
 	&= (a\alpha_1 + b\alpha_2 + c\alpha_3)(\alpha_2 - \alpha_3) + (a\alpha_2 + b\alpha_3 + c\alpha_1)(\alpha_3 - \alpha_1) + (a\alpha_3 + b\alpha_1 + c\alpha_2)(\alpha_1 - \alpha_2)\\
 	&= (b-c)(\alpha_1^2 + \alpha_2^2 + \alpha_3^2 - \alpha_1\alpha_2 - \alpha_1\alpha_3 - \alpha_2\alpha_3)\\
