Added command for alternative character and finished first draft of proof of gauss, finally. 8 weeks after initially intended.

--- a/LaTeX/dissertation.tex
+++ b/LaTeX/dissertation.tex
@@ -12,6 +12,7 @@
 \newcommand{\for}{\text{for }}
 \newcommand{\si}{\text{if }}
 \newcommand{\pai}{\mathcal{O}}
+\newcommand{\galt}[1]{{#1}_{\ast}} % alternate characters for gauss proof
 
 \begin{document}
 \maketitle
