Added a new command for the integers mod n and added to the finite fields document.

--- a/LaTeX/dissertation.tex
+++ b/LaTeX/dissertation.tex
@@ -8,6 +8,7 @@
 \bibliographystyle{unsrt}
 
 \newcommand{\fp}[1][p]{\mathbb{F}_{#1}}
+\newcommand{\zn}[1][n]{\mathbb{Z}_{#1}}
 \newcommand{\fpu}[1][p]{\mathbb{F}_{#1}^{\times}}
 \newcommand{\for}{\text{for }}
 \newcommand{\si}{\text{if }}
