--- a/LaTeX/finitefieldsdefinitions.tex
+++ b/LaTeX/finitefieldsdefinitions.tex
@@ -16,6 +16,23 @@ Therefore, $\zn[4]$ fails to meet the criteria for a field.
 
 The question of finding inverses, you should also remember, has an easy, general solution, which involves the euclidean algorithm, which is recapped here.
 \begin{definition}
+	The euclidean algorithm takes two numbers and returns their \emph{greatest common divisor (gcd)} by repeated division with remainder.
+\end{definition}
+\begin{align*}
+	\gcd(21,15):21 &= 1\times15 + 6\\
+	15 &= 2\times6 + 3\\
+	6 &= 2\times3 + 0\\
+\end{align*}
+So $\gcd(21,15)=3$
+Using the steps of the algorithm, it is possible to calculate
+\begin{align*}
+	\gcd(21,15) = 3 &= 1\times15 - 2\times6\\
+	&= 15 - 2\times(21 - 1\times15)\\
+	&= 15 - 2\times21 + 2\times15\\
+	&=3\times15 - 2\times21
+\end{align*}
+So $3 = 3\times15 - 2\times21$. This is important, because writing the gcd in this fashion allows us to find the multiplicative inverse of an element $a$ of a finite field, by solving a linear congruence $ax\equiv 1 \mod p$.
+\begin{definition}
 	A linear congruence is an equation of the form
 	$$ax \equiv b \mod n$$
 \end{definition}
